--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,7 +32,7 @@ $background: url(../imagenes/fondo1.JPG.jpeg);
 }
 
 .clave {
-    width: 15%;
+    width: 50%;
     height: 100%;
 }
 
@@ -92,6 +92,7 @@ a {
 .alineado {
     margin-right: 5px;
     padding-right: 5px;
+    text-align: center;
 }
 
 .orden {
