--- a/sass/style.scss
+++ b/sass/style.scss
@@ -467,6 +467,7 @@ a {
     }
 
    .redes {
+        font-size: 6px;
        margin-left: 10px;
     }
 
@@ -549,6 +550,10 @@ a {
     .menu li {
         padding-left: 0px;
         padding-right: 5px;
+    }
+
+    .redes {
+        font-size: 10px;
     }
 
     .clave {
